<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">myWalls</string>
    <string name="powered">Powered by Unsplash.com</string>
    <string name="version_code">3.2.3</string>
    <string name="about_app">ABOUT APP</string>
    <string name="introduce">INTRODUCE</string>
    <string name="gitHub">GITHUB</string>
    <string name="email">EMAIL</string>
    <string name="source_code">SOURCE CODE</string>
    <string name="donate">DONATE (ALIPAY)</string>
    <string name="translators">TRANSLATORS</string>
    <string name="libraries">LIBRARIES</string>
    <string name="enter">ENTER</string>
    <string name="exit">EXIT</string>
    <string name="copy">COPY</string>
    <string name="next">NEXT</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="backstage">BACKSTAGE</string>
    <string name="details">DETAILS</string>
    <string name="restart">RESTART</string>
    <string name="create">CREATE</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="check">CHECK</string>
    <string name="set">SET</string>
    <string name="search">SEARCH</string>
    <string name="follow">FOLLOW</string>
    <string name="following">FOLLOWING</string>
    <string name="my_follow">My follow</string>
    <string name="all">ALL</string>
    <string name="stats">Stats</string>
    <string name="by">By</string>
    <string name="on">On</string>
    <string name="now">Now</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="collect">Collect</string>
    <string name="collected">Collected</string>
    <string name="download">Download</string>
    <string name="followed">Followed</string>
    <string name="released">Released</string>
    <string name="published">Published</string>
    <string name="curated">Curated</string>
    <string name="photos">photos</string>
    <string name="users">users</string>
    <string name="to">to</string>
    <string name="your">your</string>
    <string name="you">you</string>
    <string name="photo">photo</string>
    <string name="more">MORE</string>
    <string name="year_ago">years ago</string>
    <string name="month_ago">months ago</string>
    <string name="day_ago">days ago</string>
    <string name="hour_ago">hours ago</string>
    <string name="minute_ago">minutes ago</string>
    <string name="second_ago">seconds ago</string>
    <string name="relative_photo">related photos</string>
    <string name="relative_collection">related collections</string>
    <string name="follow_system">Follow System</string>
    <string name="unsplash">Unsplash.com</string>
    <string name="about_unsplash">Beautiful, free photos.\nGifted by the world\'s most generous community of photographers.</string>
    <string name="retrofit">Retrofit 2.0</string>
    <string name="about_retrofit">Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="glide">Glide</string>
    <string name="about_glide">An image loading and caching library for Android focused on smooth scrolling.</string>
    <string name="circular_progress_view">CircularProgressView</string>
    <string name="about_circular_progress_view">Material style circular progress bar for Android.</string>
    <string name="circle_image_view">CircleImageView</string>
    <string name="about_circle_image_view">A circular ImageView for Android.</string>
    <string name="photo_view">PhotoView</string>
    <string name="about_photo_view">Implementation of ImageView for Android that supports zooming, by various touch gestures.</string>
    <string name="page_indicator">InkPageIndicator</string>
    <string name="about_page_indicator">InkPageIndicator created by @nickbutcher for Plaid https://github.com/nickbutcher/plaid and backported by David Pacioianu for API 14+ (4.0+).</string>
    <string name="greendao_db">greenDAO</string>
    <string name="about_greendao_db">greenDAO is activity light and fast ORM solution for Android that maps objects to SQLite databases.</string>
    <string name="butter_knife">Butter Knife</string>
    <string name="about_butter_knife">Bind Android views and callbacks to fields and methods.</string>
    <string name="feedback_click_retry">CLICK TO RETRY</string>
    <string name="feedback_load_failed_tv">FAILED TO LOAD</string>
    <string name="feedback_load_failed_toast">Failed to load.</string>
    <string name="feedback_load_nothing_tv">LOAD NOTHING</string>
    <string name="feedback_load_nothing_toast">Load nothing.</string>
    <string name="feedback_search_failed_tv">FAILED TO SEARCH</string>
    <string name="feedback_search_failed_toast">Failed to search.</string>
    <string name="feedback_search_nothing_tv">SEARCH NOTHING</string>
    <string name="feedback_search_nothing_toast">Search nothing.</string>
    <string name="feedback_search_bar">Search photos, collections or users</string>
    <string name="feedback_search_photos_bar">Key word of photos</string>
    <string name="feedback_search_users_bar">Key word of users</string>
    <string name="feedback_search_photos_tv">SEARCH PHOTOS</string>
    <string name="feedback_search_collections_tv">SEARCH COLLECTIONS</string>
    <string name="feedback_search_users_tv">SEARCH USERS</string>
    <string name="feedback_notify_restart">Restart to work.</string>
    <string name="feedback_download_success">Download successfully.</string>
    <string name="feedback_download_photo_success">Download photo successfully.</string>
    <string name="feedback_download_photo_failed">Download photo failed.</string>
    <string name="feedback_download_collection_success">Download collection successfully.</string>
    <string name="feedback_download_collection_failed">Download collection failed.</string>
    <string name="feedback_downloading">DOWNLOADING</string>
    <string name="feedback_download_start">Start download.</string>
    <string name="feedback_no_sd_card">Cannot found SD card.</string>
    <string name="feedback_create_file_failed">Create file failed.</string>
    <string name="feedback_need_permission">Failed to get permission.</string>
    <string name="feedback_choose_share_app">Share photo</string>
    <string name="feedback_choose_wallpaper_app">Set as wallpaper</string>
    <string name="feedback_download_repeat">Download repeat.</string>
    <string name="feedback_file_does_not_exist">File does not exist.</string>
    <string name="feedback_views">Views</string>
    <string name="feedback_downloads">Downloads</string>
    <string name="feedback_likes">Likes</string>
    <string name="feedback_size">Size</string>
    <string name="feedback_color">Color</string>
    <string name="feedback_location">Location</string>
    <string name="feedback_camera_make">Camera make</string>
    <string name="feedback_camera_model">Camera model</string>
    <string name="feedback_exposure">Exposure time</string>
    <string name="feedback_aperture">Aperture</string>
    <string name="feedback_focal">Focal length</string>
    <string name="feedback_iso">Iso</string>
    <string name="feedback_portfolio_is_null">Portfolio link is empty.</string>
    <string name="feedback_no_filter">No filter options.</string>
    <string name="feedback_request_token_failed">Request access token failed.</string>
    <string name="feedback_login_text">Login to your Unsplash account.</string>
    <string name="feedback_please_login">Please login.</string>
    <string name="feedback_edit_my_profile">Edit profile</string>
    <string name="feedback_edit_username">Username (letters, numbers, underscores)</string>
    <string name="feedback_edit_first_name">First name</string>
    <string name="feedback_edit_last_name">Last name</string>
    <string name="feedback_edit_email">Email address</string>
    <string name="feedback_edit_portfolio">Personal site / portfolio</string>
    <string name="feedback_edit_location">Location</string>
    <string name="feedback_edit_bio">Bio</string>
    <string name="feedback_update_profile_failed">Cannot edit profile.</string>
    <string name="feedback_add_to_collection">Add to collection</string>
    <string name="feedback_delete_from_collection">Delete from collection</string>
    <string name="feedback_create_collection">Create new collection</string>
    <string name="feedback_edit_collection">Edit collection</string>
    <string name="feedback_name">Name</string>
    <string name="feedback_description">Description (optional)</string>
    <string name="feedback_collection_private">Make collection private</string>
    <string name="feedback_name_is_required">Name is required.</string>
    <string name="feedback_sure">Are you sure?</string>
    <string name="feedback_notify_set_back_to_top">You can set the effect of back pressed.</string>
    <string name="feedback_add_photo_failed">Add photo failed.</string>
    <string name="feedback_delete_photo_failed">Delete photo failed.</string>
    <string name="feedback_create_collection_failed">Create collection failed.</string>
    <string name="feedback_update_collection_failed">Update collection failed.</string>
    <string name="feedback_delete_collection_failed">Delete collection failed.</string>
    <string name="feedback_overload">Overload</string>
    <string name="feedback_exceed_rate_limit">In this hour, the visits of Uysplash API exceed the rate limit, So we cannot load anything now.\n\nYou can try again in next hour.</string>
    <string name="feedback_confirm_change_theme">Confirm Change Theme</string>
    <string name="feedback_change_theme_warning">Switch theme now will cause download tasks to fail.</string>
    <string name="feedback_confirm_restart">Confirm Restart</string>
    <string name="feedback_restart_warning">Restart app now will cause download tasks to fail.</string>
    <string name="feedback_click_again_to_exit">Click again to exit.</string>
    <string name="feedback_share_photo_title">A photo from Unsplash.com</string>
    <string name="feedback_share_photo_extra">Taken by # on $\n</string>
    <string name="feedback_share_collection_title">A Collection from Unsplash.com</string>
    <string name="feedback_share_collection_extra">Created by # on $\n</string>
    <string name="feedback_share_user_title">A user profile from Unsplash.com</string>
    <string name="feedback_share_user_extra">#\n</string>
    <string name="feedback_like_failed">Like photo failed.</string>
    <string name="feedback_unlike_failed">Unlike photo failed.</string>
    <string name="feedback_follow_failed">Follow failed.</string>
    <string name="feedback_cancel_follow_failed">Cancel follow failed.</string>
    <string name="feedback_story_is_null">Story does not exist or has not been loaded.</string>
    <string name="feedback_get_notification_failed">Failed to load notifications.</string>
    <string name="feedback_pick_update_interval">Update interval. (Hour)</string>
    <string name="feedback_interval_bounds">The interval must ranges from 1 to 24.</string>
    <string name="feedback_update_only_in_wifi">Update only when device is connected to WIFI.</string>
    <string name="feedback_source_collection">Source collections on the Unsplash.</string>
    <string name="feedback_set_as_source_succeed">Set as source successfully.</string>
    <string name="feedback_set_as_source_failed">This source is already exist.</string>
    <string name="feedback_confirm_exit_without_save">Do you want to exit without saving settings?</string>
    <string name="introduce_title_back_top">Scroll To Top</string>
    <string name="introduce_description_back_top">Click top bar or back button, the photo list view will scroll back to the top.</string>
    <string name="transition_me_avatar">me_avatar</string>
    <string name="info">Information</string>
    <string name="apply">Apply</string>
</resources>