<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_me_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.wallpapers.unsplash.common.ui.widget.coordinatorView.StatusBarView
            android:id="@+id/activity_me_statusBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.wallpapers.unsplash.common.ui.widget.SwipeBackCoordinatorLayout
            android:id="@+id/activity_me_swipeBackView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/root_color"
            tools:ignore="UnusedAttribute">

            <com.wallpapers.unsplash.common.ui.widget.nestedScrollView.NestedScrollAppBarLayout
                android:id="@+id/activity_me_appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:theme="@style/MysplashToolbarTheme">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_navi" />

                    <com.wallpapers.unsplash.common.ui.widget.coverView.CoverMaskLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="220dp"
                        app:cml_gradient_angle="90"
                        app:layout_scrollFlags="scroll">


                        <android.support.v7.widget.Toolbar
                            android:id="@+id/activity_me_toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:background="@android:color/transparent"
                            app:popupTheme="@style/MysplashPopupMenuTheme" />

                        <com.wallpapers.unsplash.common.ui.widget.CircleImageView
                            android:id="@+id/activity_me_avatar"
                            android:layout_width="@dimen/design_icon_size"
                            android:layout_height="@dimen/design_icon_size"
                            android:layout_below="@id/activity_me_toolbar"
                            android:layout_marginLeft="@dimen/normal_margin"
                            android:foreground="?attr/selectableItemBackground"
                            android:scaleType="centerCrop"
                            android:src="?attr/line_color"
                            android:stateListAnimator="@animator/touch_rise_avatar"
                            android:transitionName="@string/transition_me_avatar"
                            tools:ignore="ContentDescription,RtlHardcoded" />

                        <TextView
                            android:id="@+id/activity_me_title"
                            style="@style/title_text"
                            android:layout_below="@id/activity_me_toolbar"
                            android:layout_marginLeft="@dimen/normal_margin"
                            android:layout_marginRight="@dimen/normal_margin"
                            android:layout_toLeftOf="@+id/container_user_profile_followBtn"
                            android:layout_toRightOf="@+id/activity_me_avatar"
                            android:ellipsize="marquee"
                            android:focusable="false"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:text="Hiepfdfdfdfdfdfdfdfdfdfdfdfd"
                            android:textColor="?attr/title_color"
                            android:textSize="@dimen/large_title_text_size"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText,RtlHardcoded" />

                        <com.wallpapers.unsplash.common.ui.widget.rippleButton.RippleButton
                            android:id="@+id/container_user_profile_followBtn"
                            android:layout_width="100dp"
                            android:layout_height="28dp"
                            android:layout_alignParentRight="true"
                            android:layout_alignTop="@+id/activity_me_avatar"
                            android:layout_marginRight="4dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:stateListAnimator="@animator/touch_rise_follow_button"
                            android:visibility="gone"
                            app:rb_title_off="@string/follow"
                            app:rb_title_on="@string/following"
                            tools:ignore="UnusedAttribute" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/container_user_profile_tagList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/activity_me_avatar"
                            android:layout_toRightOf="@+id/activity_me_avatar"
                            android:clipToPadding="false"
                            android:paddingLeft="@dimen/normal_margin"
                            tools:ignore="RtlHardcoded,RtlSymmetry"
                            tools:layout_height="35dp"
                            tools:listitem="@layout/item_tag_mini" />

                        <com.wallpapers.unsplash.me.view.widget.MeProfileView
                            android:id="@+id/activity_me_profileView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/activity_me_avatar" />

                        <TextView
                            android:id="@+id/container_user_profile_bio"
                            style="@style/content_text"
                            android:layout_width="wrap_content"
                            android:layout_below="@id/container_user_profile_tagList"
                            android:layout_marginLeft="@dimen/normal_margin"
                            android:layout_marginRight="@dimen/normal_margin"
                            android:layout_toRightOf="@+id/activity_me_avatar"
                            android:lineSpacingMultiplier="1.3"
                            android:textIsSelectable="false"
                            tools:text="Do not go gentle into that good night, Old age should burn and rave at close of day; Rage, rage against the dying of the light." />


                    </com.wallpapers.unsplash.common.ui.widget.coverView.CoverMaskLayout>
                </FrameLayout>

                <android.support.design.widget.TabLayout
                    android:id="@+id/activity_me_tabLayout"
                    style="@style/MysplashTabLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tab_layout_height" />

            </com.wallpapers.unsplash.common.ui.widget.nestedScrollView.NestedScrollAppBarLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/activity_me_viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <include layout="@layout/init_ads" />
        </com.wallpapers.unsplash.common.ui.widget.SwipeBackCoordinatorLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>